created a project card template

--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <title>Bug Finder | Home</title>
     <link rel="stylesheet" href="./style.css"/>
     <script src="js/main.js" type="module"></script>
+    <template>
+      <div class="projectCard">
+        <h3>Project: </h3>
+        <p>Summary: </p>
+      </div>
+    </template>
   </head>
   <body>
     <header id="main-header"></header>
     <main class="divider">
+      <di class="desc">
+        <h2>Welcome to Bug Finder!</h2>
+        <p>This site is to aid in the continuing development of several projects. 
+          The community is invited to post about any bugs they find when using such 
+          products. By doing so the quality of the products will increase and so will
+         the community's satisfaction while using them.</p>
+      </div>
+      <div class="projectList">
+        <h2>Community Projects</h2>
+      </div>
     </main>
   <footer id="main-footer"></footer>
   </body>
