--- a/signIn.html
+++ b/signIn.html
@@ -9,21 +9,20 @@
   </head>
   <body>
     <header id="main-header"></header>
-    <main class="divider">
-      <div class="container">
-        <form class="loginForm">
-          <p>
-            <label for="email">Email</label>
-            <input type="text" placeholder="email" id="email"/>
-          </p>
-          <p>
-            <label for="password">Password</label>
-            <input type="password" placeholder="password" id="password" />
-          </p>
-          <button type="button" id="loginButton">Login</button>
-        </form>
-      </div>
-    </main>
-  <footer id="main-footer"></footer>
+    <div class="container">
+      <form class="loginForm">
+        <p>
+          <label for="email">Email</label>
+          <input type="text" placeholder="email" id="email"/>
+        </p>
+        <p>
+          <label for="password">Password</label>
+          <input type="password" placeholder="password" id="password" />
+        </p>
+        <button type="button" id="loginButton">Login</button><br>
+        <button type="button" id="createButton">Create Account</button>
+      </form>
+    </div>
+    <footer id="main-footer"></footer>
   </body>
 </html>
