--- a/profile.html
+++ b/profile.html
@@ -19,10 +19,8 @@
   <body>
     <header id="main-header"></header>
     <main class="divider">
-      <div class="projectDesc">
-      </div>
       <div class="commentList">
-        <h2>Bugs Found</h2>
+        <h2>My Tickets</h2>
       </div>
     </main>
   <footer id="main-footer"></footer>
