--- a/signIn.html
+++ b/signIn.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bug Finder | Home</title>
     <link rel="stylesheet" href="./style.css"/>
-    <script src="js/main.js" type="module"></script>
+    <script src="js/signIn.js" type="module"></script>
   </head>
   <body>
     <header id="main-header"></header>
@@ -20,7 +20,7 @@
           <input type="password" placeholder="password" id="password" />
         </p>
         <button type="button" id="loginButton">Login</button><br>
-        <button type="button" id="createButton">Create Account</button>
+        <button type="button" id="createAccountButton">Create Account</button>
       </form>
     </div>
     <footer id="main-footer"></footer>
