users can add and see their reported bugs

--- a/create.html
+++ b/create.html
@@ -24,7 +24,7 @@
           <input type="password" placeholder="password" id="password-create" />
         </p>
         <p>
-            <label for="password">Re-enter Password</label>
+            <label for="password">Password</label>
             <input type="password" placeholder="re-enter password" id="re-password" />
           </p>
         <button type="button" id="createButton">Create</button>
