--- a/projectPage.html
+++ b/projectPage.html
@@ -8,9 +8,9 @@
     <script src="js/projectPage.js" type="module"></script>
     <template id="bugTicket">
       <div class="bugCard">
-        <h3>Bug: </h3>
-        <h4>Status: Unresolved</h4>
-        <p>Summary: </p>
+        <h3 class="cardTitle">Bug: </h3>
+        <p>Status: Unresolved</p>
+        <p class="summary">Summary: </p>
         <input type="button" value="Resolve" class="resolveBtn">
       </div>
       <br>
