Can now edit tickets

--- a/projectPage.html
+++ b/projectPage.html
@@ -8,8 +8,8 @@
     <script src="js/projectPage.js" type="module"></script>
     <template id="bugTicket">
       <div class="bugCard">
-        <h3 class="cardTitle">Bug: </h3>
-        <p class="summary">Summary: </p>
+        <h3 class="cardTitle"></h3>
+        <p class="summary"></p>
         <input type="button" value="Edit" class="editBtn" data-id="">
         <input type="button" value="Delete" class="deleteBtn" data-id="">
       </div>
