created profile page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <template id="projectCardTemplate">
       <a href="/projectPage.html?project=" class="projectLink">
         <div class="projectCard">
-          <h3 class="projectName">Project: </h3>
+          <h3 class="projectName"></h3>
         </div>
       </a>
       <br>
