--- a/projectPage.html
+++ b/projectPage.html
@@ -32,7 +32,7 @@
             <input type="text" id="createTitle"/>
           </p>
           <p>
-            <textarea placeholder="Descibe the bug here" id="createDescription" rows="5" cols="50"></textarea>
+            <textarea placeholder="Describe the bug here" id="createDescription" rows="5" cols="50"></textarea>
           </p>
           <button type="button" id="addBugButton">Add Bug</button>
         </form>
