--- a/index.html
+++ b/index.html
@@ -18,31 +18,34 @@
   <body>
     <header id="main-header"></header>
     <main class="divider">
-      <div class="desc">
-        <h2>Welcome to Bug Finder!</h2>
-        <p>This site is to aid in the continuing development of several projects. 
+      <div id="flexbox">
+        <div id="flex-col-left">
+          <h2>Welcome to Bug Finder!</h2>
+          This site is to aid in the continuing development of several projects. 
           The community is invited to post about any bugs they find when using such 
           products. By doing so the quality of the products will increase and so will
-         the community's satisfaction while using them.</p>
-      </div>
-      <div class="projects">
-        <h2>Community Projects</h2>
-        <div style="font-size:1.5em">
-           <button id="addProject" style="background-color:#09b464;">Add New Project</button>
+         the community's satisfaction while using them.
         </div>
-        <form id="addProjectForm">
+      
+        <div class="projects" id="flex-col-right">
+          <h2 style="text-align:left">Community Projects</h2>
+          <div style="font-size:1.5em">
+             <button class="cool" id="addProject" style="background-color:#e4e4e4;">Add New Project</button>
+          </div>
+          <form id="addProjectForm">
 
-          <br>
-          <input type="text" id="addProjectTitle" placeholder="Project Title"/>
-          <br>
-          <br>
+            <br>
+            <input type="text" id="addProjectTitle" placeholder="Project Title"/>
+            <br>
+            <br>
           
-          <textarea placeholder="Describe the project here" id="addProjectDescription" rows="5" cols="50"></textarea>
-          <br>
-          <button type="button" id="addProjectButton">Submit</button>
-        </form>
-        <ul class="projectList">
-        </ul>
+            <textarea placeholder="Describe the project here" id="addProjectDescription" rows="5" cols="50"></textarea>
+            <br>
+            <button type="button" id="addProjectButton">Submit</button>
+          </form>
+          <ul class="projectList">
+          </ul>
+        </div>
       </div>
     </main>
   <footer id="main-footer"></footer>
