more layout and dynamic-responsiveness changes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <body>
     <header id="main-header"></header>
     <main class="divider">
-      <div id="flexbox">
-        <div id="flex-col-left">
+      <div id="flexbox-index">
+        <div id="flex-index-col-left">
           <h2>Welcome to Bug Finder!</h2>
           This site is to aid in the continuing development of several projects. 
           The community is invited to post about any bugs they find when using such 
@@ -27,7 +27,7 @@
          the community's satisfaction while using them.
         </div>
       
-        <div class="projects" id="flex-col-right">
+        <div class="projects" id="flex-index-col-right">
           <h2 style="text-align:left">Community Projects</h2>
           <div style="font-size:1.5em">
              <button class="cool" id="addProject" style="background-color:#e4e4e4;">Add New Project</button>
