--- a/signIn.html
+++ b/signIn.html
@@ -13,11 +13,13 @@
       <form class="loginForm">
         <p>
           <label for="email">Email</label>
-          <input type="text" placeholder="email" id="email"/>
+          <br>
+          <input type="text" placeholder="john123@gmail.com" id="email"/>
         </p>
         <p>
           <label for="password">Password</label>
-          <input type="password" placeholder="password" id="password" />
+          <br>
+          <input type="password" placeholder="abc123password" id="password" />
         </p>
         <button type="button" id="loginButton">Login</button><br>
         <button type="button" id="createAccountButton">Create Account</button>
