few more visual things

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="projects" id="flex-index-col-right">
           <h2 style="text-align:left">Community Projects</h2>
           <div style="font-size:1.5em">
-             <button class="cool" id="addProject" style="background-color:#e4e4e4;">Add New Project</button>
+             <button class="cool" id="addProject" style="background-color:#82d394;">Add New Project</button>
           </div>
           <form id="addProjectForm">
 
