--- a/projectPage.html
+++ b/projectPage.html
@@ -26,7 +26,7 @@
         </div>
         <div class="ticketHeader">
           <h2>Bugs Found</h2>
-          <button id="reportBug">Report Bug</button>
+          <button class="cool" id="reportBug" style="background-color:#82d394;">Report Bug</button>
           <form id="addTicketForm">
             <p>
             <label for="createTitle">Title</label>
